# saroku

./: .env.example  .gitignore  README.md  SOLUTION.md  pyproject.toml
adapters/: litellm_adapter.py
core/: baseline.py  report.py  runner.py  scorer.py
generators/: llm_generator.py
judges/: rule_judge.py
probe_schemas/: consistency.py  honesty.py  sycophancy.py
src/saroku/: __init__.py  cli.py  dashboard.py  guard.py  local_judge.py  ml_scorer.py  rules_engine.py
src/saroku/adapters/: litellm_adapter.py
src/saroku/benchmarks/: __init__.py  bench_v1.py  calibration.py
src/saroku/core/: report.py  results.py  runner.py  schema.py  scorer.py
src/saroku/generators/: llm_generator.py
src/saroku/judges/: llm_judge.py
src/saroku/probe_schemas/: __init__.py  consistency.py  corrigibility.py  goal_drift.py  honesty.py  minimal_footprint.py  prompt_injection.py  sycophancy.py  trust_hierarchy.py
src/saroku/training/: data_generator.py  trainer.py
